static/styles/zulip.css
/* ... */
#my_information {
    display: table-cell;
    vertical-align: middle;
    padding-left: 0.5em;
    cursor: pointer;
}

#my_information .my_fullname {
    font-weight: bold;
    white-space: nowrap;
}
.my_email {
    font-weight: 300;
}


.logout {
    white-space: nowrap;
}

.new_message_button {
    padding-top: 1.1em;
}

.bottom_sidebar {
    margin-top: 1em;
}

.streams_title {
    font-size: 0.9em;
    font-weight: normal;

    display: inline;
}

#streams_list:hover #streams_inline_cog {
   visibility: visible;
   opacity: 0.5;
}

#streams_list #streams_inline_cog:hover {
   opacity: 1.0;
}

#streams_inline_cog {
    float: right;
    color: #000;
    text-decoration: none;
    visibility: hidden;

    margin-top: 3px;
}

.tooltip {
    max-width: 10em;
}

#stream_filters {
    border-bottom: 1px solid #eee;
    overflow-x: visible;
    overflow-y: hidden;
    margin: 2px 0px 0px 0px;
    padding: 0px 10px 10px 0;
}

#stream_filters .narrow-filter {
    padding-left: 1.5em;
}

.narrow-filter {
    display: block;
    position: relative;
}

#stream_filters:hover {
    overflow-y: auto;
}

#stream_filters li:hover {
    background-color: #e2e8dd;
}

#stream_filters li.active-subject-filter:hover {
    background-color: #ccd6cc;
}

#user_presences {
    list-style-position: inside; /* Draw the bullets inside our box */
    margin-top:  1em;
    margin-left: 0;
    overflow-y:  hidden;
}
#user_presences:hover {
    overflow-y: auto;
}

#user_presences li:hover {
    background-color: #e2e8dd;
}

#user_presences .user_sidebar_entry:hover {
    cursor: pointer;
}

#user_presences li {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.user_sidebar_entry .count {
    display: none;
}

#user_presences li {
    list-style-type: none;
}

.user-status-indicator {
    display: block;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    border: 1px solid;
    float: left;
    position: relative;
    top: 5px;
    margin-right: 0.5em;
}

.user_active .user-status-indicator {
    background-color: #44C21D;
    border-color: #44C21D;
}

.user_idle .user-status-indicator {
    border-color: #EC7E18;
    background-color: #EC7E18;

    background: -moz-linear-gradient(top,  rgba(255,255,255,0) 50%, rgba(236,126,24,1) 50%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%,rgba(255,255,255,0)), color-stop(50%,rgba(236,126,24,1))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* IE10+ */
    background: linear-gradient(to bottom,  rgba(255,255,255,0) 50%,rgba(236,126,24,1) 50%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ec7e18',GradientType=0 ); /* IE6-9 */
}

.user_offline .user-status-indicator {
    background-color: none;
    border-color: gray;
}

#user_presences a {
    color: #333;
}

#invite-user-link i {
    text-decoration: none;
    margin-right: 5px;
}

ul.filters {
    list-style-type: none;
}

ul.filters a {
    color: #333;
}

ul.filters hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

li.active-filter,
li.active-subject-filter {
    font-weight: bold;
    background: #ccd6cc;
    position: relative;
}

li.active-filter:after,
li.active-subject-filter:after {
    content: "";
    position: absolute;
    top: 50%;
    right: -6px;
    margin-top: -6px;
    display: block;
    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
    border-left: 6px solid #ccd6cc;
}

li.hidden-filter {
    visibility: hidden;
    display: none;
}

ul.filters {
    margin-left: 0px;
    padding-right: 10px;
}

#stream_filters .count,
#global_filters .count {
    margin-left: 0.5em;
    display: none;
}

#stream_filters .count {
    position: absolute;
    right: 20px;
    top: 4px;
    padding: 2px 3px 1px 3px;
    background: #80837f;
    color: #ffffff;
    border-radius: 1px;
    font-size: 11px;
    font-weight: normal;
}

.subject_count {
    display: block;
    position: absolute;
    line-height: 1em;
    right: 20px;
    top: 2px;
    padding: 2px 3px 0px 3px;
    background: #a6ada4;
    color: #ffffff;
    border-radius: 1px;
    font-size: 11px;
    font-weight: normal;
}

ul.filters i {
    padding-right: 0.25em;
    /* Make filter icons the same width so labels line up. */
    display: inline-block;
    width: 13px;
}

li.actual-dropdown-menu i {
    /* In gear menu, make icons the same width so labels line up. */
    display: inline-block;
    width: 14px;
}

ul.filters .arrow {
    position: absolute;
    right: 0px;
    top: 2px;
    font-size: 0.8em;
    display: none;
}

ul.filters li:hover .arrow {
    display: inline;
    cursor: pointer;
    color: #888;
}

ul.filters li .arrow:hover {
    display: inline;
    cursor: pointer;
    color: #000;
}

ul.filters li.out_of_home_view {
    opacity: 0.25;
}

.message_list {
}

.message_area_padder {
    /* The height of the header and the tabbar plus a small gap */
    margin-top: 68px;
    /* This is needed for the floating recipient bar
     in Firefox only, for some reason; otherwise it gets
     a scrollbar */
    overflow: visible;
    padding-left: 15px;
}


.message_comp {
    display: none;
}

.message_comp {
    background-color: #ffffff;
    padding: 8px 20px 8px 10px;
}

#compose_buttons {
    text-align: center;
}

td.pointer {
    vertical-align: top;
    padding-top: 10px;
    background-color: #fff;
}

.new_messages {
    background-color: lightblue;
}

.new_messages,
.new_messages_fadeout {
    -webkit-transition: all 3s ease-in-out;
    -moz-transition: all 3s ease-in-out;
    -o-transition: all 3s ease-in-out;
    transition: all 3s ease-in-out;
}
/* ... */

